--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Annasophia's Space Alien HTML" />
+    <meta name="keywords" content="mths. ics2o" />
+    <meta name="author" content="Annasophia" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <title>Annasophia's Space Alien HTML</title>
+    <link rel="" sizes="180x180" href="apple-touch-icon.png"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"/>
+    <link rel="icon" type="image/pmg"  sizes="16x16" href="favicon-16x16.png" />
   </head>
   <body>
-    <p>Hello, world!</p>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.54/dist/phaser.js"></script>
+    <script type="module" src="./js/game.js"></script>
   </body>
 </html>
