--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,9 +8,9 @@
     <meta name="author" content="Annasophia" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>Annasophia's Space Alien HTML</title>
-    <link rel="" sizes="180x180" href="apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"/>
-    <link rel="icon" type="image/pmg"  sizes="16x16" href="favicon-16x16.png" />
+    <link rel="" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/pmg" sizes="16x16" href="favicon-16x16.png" />
   </head>
   <body>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54/dist/phaser.js"></script>
