--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="Annasophia" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>Annasophia's Space Alien HTML</title>
-    <link rel="" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/pmg" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
   <body>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54/dist/phaser.js"></script>
